--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+tempPages/
+
+appsettings.json
+appsettings.Development.json
+
 # User-specific files
 *.rsuser
 *.suo
